--- a/GLibTest/GLibTest.vcxproj
+++ b/GLibTest/GLibTest.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="src\BoardView.h" />
     <ClInclude Include="src\Search.h" />
+    <ClInclude Include="src\SearchControl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
