--- a/Andantino/Andantino.vcxproj
+++ b/Andantino/Andantino.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{73209464-E77C-4D0B-9325-FE84AFD9C02D}</ProjectGuid>
-    <RootNamespace>GLibTest</RootNamespace>
+    <RootNamespace>Andantino</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>Andantino</ProjectName>
   </PropertyGroup>
